<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_page_event_name"
        android:layout_marginTop="150dp" />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_page_event_name"
        android:id="@+id/_edit_page_event_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_page_event_detail"
        android:layout_marginTop="100dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_page_event_date"
        android:id="@+id/_edit_page_event_date"
        android:inputType="date"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_page_event_isGone"
        android:id="@+id/chk_page_event_gone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"

        />
   

</LinearLayout>